se cambiaron de ubicación a los archivos y se agregó el botton_menu a detalle_Tarea

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,7 +8,7 @@
     android:background="@color/register_bk_color"
     android:focusableInTouchMode="true"
     android:gravity="center"
-    tools:context=".Vistas.Register_Activity">
+    tools:context=".Vista_Usser.Register_Activity">
 
     <ScrollView
         android:layout_width="match_parent"
