--- a/app/src/main/res/layout/activity_detalle_tablero.xml
+++ b/app/src/main/res/layout/activity_detalle_tablero.xml
@@ -11,12 +11,27 @@
         android:id="@+id/titulo_tablero"
         android:textSize="17dp"
         android:textStyle="bold"
+        android:textColor="@color/black"
+        android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="60dp"/>
+    <TextView
+        android:id="@+id/informacion_tarea"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:textColor="@color/black"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="16dp"
+        android:text="No hay información."
+        android:visibility="invisible"
+        android:textSize="17dp"
+        android:textStyle="bold"
+        android:textAlignment="center"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -40,9 +55,27 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="60dp"
         android:src="@drawable/ic_baseline_add_24"
         app:borderWidth="0dp"
         app:elevation="4dp" />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation_tarea"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:elevation="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/bottom_navigation_detalle_tablero"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        app:labelVisibilityMode="selected"
+        app:itemIconTint="#FFFFFF"
+        style="@style/BottomNavigation"
+        />
 
 </RelativeLayout>
