--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:background="@color/login_bk_color"
     android:focusableInTouchMode="true"
     android:gravity="center"
-    tools:context=".Vistas.Login_Activity">
+    tools:context=".Vista_Usser.Login_Activity">
 
     <ScrollView
         android:layout_width="match_parent"
