--- a/app/src/main/res/layout/fragment_tercero.xml
+++ b/app/src/main/res/layout/fragment_tercero.xml
@@ -8,7 +8,7 @@
     android:background="@color/login_bk_color"
     android:focusableInTouchMode="true"
     android:gravity="center"
-    tools:context=".Vistas.TerceroFragment">
+    tools:context=".Vista_Fragment_Menu.TerceroFragment">
 
     <ScrollView
         android:layout_width="match_parent"
