--- a/app/src/main/res/layout/activity_detalle_tablero.xml
+++ b/app/src/main/res/layout/activity_detalle_tablero.xml
@@ -7,58 +7,13 @@
     android:id="@+id/detalle_tablero"
     tools:context=".Vistas.Detalle_Tablero">
 
-    <TextView
-        android:id="@+id/titulo_tablero"
-        android:textSize="17dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:textAlignment="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="60dp"/>
-    <TextView
-        android:id="@+id/informacion_tarea"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:textColor="@color/black"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="16dp"
-        android:text="No hay información."
-        android:visibility="invisible"
-        android:textSize="17dp"
-        android:textStyle="bold"
-        android:textAlignment="center"/>
-    <ScrollView
+    <FrameLayout
+        android:id="@+id/frame_container_tarea"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="60dp"
-        android:orientation="vertical">
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/listRecycleView_tarea"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </ScrollView>
+        android:layout_alignParentTop="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btn_agregar_tarea"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="60dp"
-        android:src="@drawable/ic_baseline_add_24"
-        app:borderWidth="0dp"
-        app:elevation="4dp" />
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_tarea"
         android:layout_width="match_parent"
