--- a/app/src/main/res/layout/list_tarea.xml
+++ b/app/src/main/res/layout/list_tarea.xml
@@ -55,6 +55,17 @@
                     android:textColor="@android:color/black"
                     android:textSize="15sp"
                     android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/estado_tarea"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_marginTop="-22dp"
+                    android:layout_marginEnd="6dp"
+
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
         </RelativeLayout>
