--- a/app/src/main/res/layout/list_tarea.xml
+++ b/app/src/main/res/layout/list_tarea.xml
@@ -47,7 +47,7 @@
 
                 <TextView
                     android:id="@+id/titulo_tarea"
-                    android:layout_width="match_parent"
+                    android:layout_width="210dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
                     android:maxLines="1"
