--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,7 +18,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
             android:orientation="vertical"
             android:padding="20dp">
 
@@ -56,88 +55,114 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputName"
-                        style="@style/parent"
-                        android:layout_marginTop="@dimen/loginViewsMargin">
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="@dimen/loginViewsMargin"
+                        android:layout_marginEnd="16dp"
+                        android:backgroundTint="@color/whiteTextColor">
 
                         <EditText
                             android:id="@+id/editTextName"
                             style="@style/modifiedEditText"
-                            android:hint="Nombre(s)"
                             android:drawableStart="@drawable/ic_baseline_person_24"
                             android:drawablePadding="6dp"
+                            android:hint="Nombre(s)"
                             android:inputType="textPersonName"
+                            android:maxLength="60"
                             android:maxLines="1"
-                            android:textSize="16dp"
-                            android:maxLength="60"/>
+                            android:textSize="16dp" />
                     </com.google.android.material.textfield.TextInputLayout>
+
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputDni"
-                        style="@style/parent"
-                        android:layout_marginTop="@dimen/loginViewsMargin">
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="@dimen/loginViewsMargin"
+                        android:layout_marginEnd="16dp"
+                        android:backgroundTint="@color/whiteTextColor">
 
                         <EditText
                             android:id="@+id/editTextDni"
                             style="@style/modifiedEditText"
-                            android:hint="Nº Documento"
                             android:drawableStart="@drawable/ic_baseline_credit_card_24"
                             android:drawablePadding="6dp"
+                            android:hint="Nº Documento"
                             android:inputType="number"
+                            android:maxLength="8"
                             android:maxLines="1"
-                            android:textSize="16dp"
-                            android:maxLength="8"/>
+                            android:textSize="16dp" />
                     </com.google.android.material.textfield.TextInputLayout>
+
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputEmail"
-                        style="@style/parent"
-                        android:layout_marginTop="@dimen/loginViewsMargin">
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="@dimen/loginViewsMargin"
+                        android:layout_marginEnd="16dp"
+                        android:backgroundTint="@color/whiteTextColor">
 
                         <EditText
                             android:id="@+id/editTextEmail"
                             style="@style/modifiedEditText"
-                            android:hint="Correo Electrónico"
-                            android:inputType="textEmailAddress"
                             android:drawableStart="@drawable/ic_baseline_email_24"
                             android:drawablePadding="6dp"
+                            android:hint="Correo Electrónico"
+                            android:inputType="textEmailAddress"
+                            android:maxLength="60"
                             android:maxLines="1"
-                            android:textSize="16dp"
-                            android:maxLength="60"/>
+                            android:textSize="16dp" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputMobile"
-                        style="@style/parent"
-                        android:layout_marginTop="@dimen/loginViewsMargin">
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="@dimen/loginViewsMargin"
+                        android:layout_marginEnd="16dp"
+                        android:backgroundTint="@color/whiteTextColor">
 
                         <EditText
                             android:id="@+id/editTextMobile"
                             style="@style/modifiedEditText"
-                            android:hint="Número Telefónico"
                             android:drawableStart="@drawable/ic_baseline_phone_iphone_24"
                             android:drawablePadding="6dp"
+                            android:hint="Número Telefónico"
                             android:inputType="phone"
+                            android:maxLength="9"
                             android:maxLines="1"
-                            android:textSize="16dp"
-                            android:maxLength="9"/>
+                            android:textSize="16dp" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputPassword"
-                        style="@style/parent"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="16dp"
                         android:layout_marginTop="@dimen/loginViewsMargin"
-                        app:passwordToggleEnabled="true"
-                        >
+                        android:layout_marginEnd="16dp"
+                        android:backgroundTint="@color/whiteTextColor"
+                        app:passwordToggleEnabled="true">
 
                         <EditText
                             android:id="@+id/editTextPassword"
                             style="@style/modifiedEditText"
-                            android:hint="Contraseña"
                             android:drawableStart="@drawable/ic_baseline_lock_24"
                             android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
                             android:drawablePadding="6dp"
+                            android:hint="Contraseña"
                             android:inputType="textPassword"
+                            android:maxLength="40"
                             android:maxLines="1"
-                            android:textSize="16dp"
-                            android:maxLength="40"/>
+                            android:textSize="16dp" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
