--- a/app/src/main/res/layout/fragment_tercero.xml
+++ b/app/src/main/res/layout/fragment_tercero.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@color/login_bk_color"
     android:focusableInTouchMode="true"
     android:gravity="center"
     tools:context=".Vista_Fragment_Menu.TerceroFragment">
@@ -40,11 +39,14 @@
                     app:civ_border_width="1dp" />
                 <Button
                     android:id="@+id/btn_loading_photo"
-                    android:layout_width="30dp"
-                    android:layout_height="31dp"
+                    android:layout_width="29dp"
+                    android:layout_height="30dp"
+                    android:gravity="center_horizontal|top"
                     android:layout_gravity="end"
-                    android:layout_marginTop="125dp"
-                    android:foreground="@drawable/ic_baseline_camera_alt_24" />
+                    android:layout_marginTop="123dp"
+                    android:foreground="@drawable/ic_baseline_camera_alt_24"
+                    android:backgroundTint="@android:color/transparent"
+                    />
             </androidx.cardview.widget.CardView>
             <!---android:layout_marginBottom="35dp"-->
             <androidx.cardview.widget.CardView
@@ -57,19 +59,23 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
                     android:orientation="vertical">
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputName2"
-                        style="@style/parent"
+                        android:layout_height="match_parent"
+                        android:backgroundTint="@color/whiteTextColor"
+                        android:layout_width="match_parent"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_marginTop="@dimen/loginViewsMargin">
-
                         <EditText
                             android:id="@+id/editTextName"
                             style="@style/modifiedEditText"
                             android:hint="Nombre(s)"
                             android:drawableStart="@drawable/ic_baseline_person_24"
+                            android:drawablePadding="6dp"
                             android:inputType="textPersonName"
                             android:maxLines="1"
                             android:textSize="16dp"
@@ -78,30 +84,41 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputDni2"
-                        style="@style/parent"
+                        android:layout_height="match_parent"
+                        android:backgroundTint="@color/whiteTextColor"
+                        android:layout_width="match_parent"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_marginTop="@dimen/loginViewsMargin">
-
                         <EditText
                             android:id="@+id/editTextDni"
                             style="@style/modifiedEditText"
                             android:hint="Nº Documento"
                             android:drawableStart="@drawable/ic_baseline_credit_card_24"
+                            android:drawablePadding="6dp"
                             android:inputType="number"
                             android:maxLines="1"
                             android:textSize="16dp"
                             android:maxLength="8"/>
                     </com.google.android.material.textfield.TextInputLayout>
+
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputEmail2"
-                        style="@style/parent"
+                        android:layout_height="match_parent"
+                        android:backgroundTint="@color/whiteTextColor"
+                        android:layout_width="match_parent"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_marginTop="@dimen/loginViewsMargin">
-
                         <EditText
                             android:id="@+id/editTextEmail"
                             style="@style/modifiedEditText"
                             android:hint="Correo Electrónico"
                             android:inputType="textEmailAddress"
                             android:drawableStart="@drawable/ic_baseline_email_24"
+                            android:drawablePadding="6dp"
                             android:maxLines="1"
                             android:textSize="16dp"
                             android:maxLength="60"/>
@@ -109,14 +126,19 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputMobile2"
-                        style="@style/parent"
+                        android:layout_height="match_parent"
+                        android:backgroundTint="@color/whiteTextColor"
+                        android:layout_width="match_parent"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_marginTop="@dimen/loginViewsMargin">
-
                         <EditText
                             android:id="@+id/editTextMobile"
                             style="@style/modifiedEditText"
                             android:hint="Número Telefónico"
                             android:drawableStart="@drawable/ic_baseline_phone_iphone_24"
+                            android:drawablePadding="6dp"
                             android:inputType="phone"
                             android:maxLines="1"
                             android:textSize="16dp"
@@ -125,17 +147,21 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputPassword2"
-                        style="@style/parent"
+                        android:layout_height="match_parent"
+                        android:backgroundTint="@color/whiteTextColor"
+                        android:layout_width="match_parent"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_marginTop="@dimen/loginViewsMargin"
-                        app:passwordToggleEnabled="true"
-                        >
-
+                        app:passwordToggleEnabled="true">
                         <EditText
                             android:id="@+id/editTextPassword"
                             style="@style/modifiedEditText"
                             android:hint="Contraseña"
                             android:drawableStart="@drawable/ic_baseline_lock_24"
                             android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
+                            android:drawablePadding="6dp"
                             android:inputType="textPassword"
                             android:maxLines="1"
                             android:textSize="16dp"
@@ -146,7 +172,8 @@
                         android:id="@+id/btnActualizar"
                         style="@style/loginButton"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="@dimen/loginViewsMargin"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="1dp"
                         android:text="Actualizar "
                         app:initialCornerAngle="27dp"/>
                 </LinearLayout>
