--- a/app/src/main/res/layout/fragment_listar_tarea.xml
+++ b/app/src/main/res/layout/fragment_listar_tarea.xml
@@ -49,6 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </ScrollView>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_agregar_tarea"
         android:layout_width="wrap_content"
@@ -61,6 +62,7 @@
         android:layout_marginBottom="70dp"
         android:src="@drawable/ic_baseline_add_24"
         app:borderWidth="0dp"
-        app:elevation="4dp"  />
+        app:elevation="4dp"
+        app:tint="@color/whiteTextColor"/>
 
 </RelativeLayout>
