--- a/app/src/main/res/layout/fragment_primer.xml
+++ b/app/src/main/res/layout/fragment_primer.xml
@@ -51,7 +51,8 @@
         android:layout_marginBottom="70dp"
         android:src="@drawable/ic_baseline_add_24"
         app:borderWidth="0dp"
-        app:elevation="4dp" />
+        app:elevation="4dp"
+        app:tint="@color/whiteTextColor"/>
 
 
 
