--- a/app/src/main/res/layout/fragment_listar_tarea.xml
+++ b/app/src/main/res/layout/fragment_listar_tarea.xml
@@ -21,6 +21,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
+        android:maxLines="1"
         android:layout_marginBottom="60dp"/>
     <TextView
         android:id="@+id/count_tarea"
@@ -42,7 +43,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="130dp"
         android:orientation="vertical">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/listRecycleView_tarea"
