--- a/app/src/main/res/layout/list_tablero.xml
+++ b/app/src/main/res/layout/list_tablero.xml
@@ -17,7 +17,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:orientation="horizontal"
             android:padding="6dp">
 
@@ -36,28 +36,39 @@
 
             <LinearLayout
                 android:id="@+id/linearLayour_main_tablero"
-                android:layout_marginLeft="4dp"
-                android:layout_toRightOf="@id/task_image_tablero"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
+
                 android:layout_marginStart="5dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginTop="2dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginTop="8dp"
+                android:layout_toRightOf="@id/task_image_tablero"
                 android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/titulo_tablero"
-                    android:layout_width="match_parent"
+                    android:layout_width="230dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
-                    android:text=""
                     android:maxLines="1"
+                    android:text="asdasdasd"
                     android:textColor="@android:color/black"
-                    android:textSize="15sp"
-                    android:textStyle="bold"/>
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
             </LinearLayout>
-
+            <ImageButton
+                android:id="@+id/btn_favorito_star"
+                style="@style/colorblanco"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="-3dp"
+                android:backgroundTint="@android:color/transparent"
+                android:src="@drawable/ic_baseline_star_rate_24"
+                android:scaleX="1.8"
+                android:scaleY="1.8"
+                />
         </RelativeLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
