--- a/app/src/main/res/layout/list_tarea.xml
+++ b/app/src/main/res/layout/list_tarea.xml
@@ -51,7 +51,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
                     android:maxLines="1"
-                    android:text=""
+                    android:text="aaaaaaaaaaaaaaaaaaaaaaaaaa"
                     android:textColor="@android:color/black"
                     android:textSize="15sp"
                     android:textStyle="bold" />
@@ -61,9 +61,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
-                    android:layout_marginTop="-22dp"
+                    android:layout_marginTop="-19.8dp"
                     android:layout_marginEnd="6dp"
-
+                    android:text="asdasdasdasd"
                     android:textSize="12sp"
                     android:textStyle="bold" />
             </LinearLayout>
