--- a/app/src/main/res/menu/menu_option.xml
+++ b/app/src/main/res/menu/menu_option.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-                <item
-                    android:id="@+id/option_exit"
-                    android:title="Cerrar Sesión"
-                    android:icon="@drawable/exit_to_app_24">
-                </item>
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/option_exit"
+        android:title="Cerrar Sesión"
+        android:icon="@drawable/exit_to_app_24"
+        app:showAsAction="ifRoom|withText" />
 </menu>
+
