--- a/app/src/main/res/layout/activity_detalle_tarea.xml
+++ b/app/src/main/res/layout/activity_detalle_tarea.xml
@@ -26,7 +26,14 @@
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="Button"/>
 
+    <com.like.LikeButton
+        tools:viewBindingIgnore="true"
+        app:icon_type="heart"
+        app:icon_size="25dp"
+        android:id="@+id/heart_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
