--- a/app/src/main/res/layout/list_tablero.xml
+++ b/app/src/main/res/layout/list_tablero.xml
@@ -56,18 +56,18 @@
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
-            <ImageButton
-                android:id="@+id/btn_favorito_star"
-                style="@style/colorblanco"
+            <com.like.LikeButton
+                app:icon_type="star"
+                app:icon_size="25dp"
+                android:id="@+id/heart_button"
                 android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="10dp"
-                android:layout_marginTop="-3dp"
+                android:layout_marginEnd="1dp"
+                android:layout_marginTop="-2dp"
                 android:backgroundTint="@android:color/transparent"
-                android:src="@drawable/ic_baseline_star_rate_24"
-                android:scaleX="1.8"
-                android:scaleY="1.8"
+                android:scaleX="0.6"
+                android:scaleY="0.6"
                 />
         </RelativeLayout>
     </LinearLayout>
