--- a/app/src/main/res/layout/list_tarea.xml
+++ b/app/src/main/res/layout/list_tarea.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="60dp"
             android:orientation="horizontal"
             android:padding="6dp">
 
@@ -30,7 +30,8 @@
                 android:layout_gravity="center"
                 android:paddingLeft="14dp"
                 android:paddingRight="14dp"
-                android:src="@drawable/ic_baseline_edit_note_24" />
+                android:src="@drawable/ic_baseline_edit_note_24"
+                app:tint="#03a9f4"/>
 
             <LinearLayout
                 android:id="@+id/linearLayour_tarea"
@@ -51,19 +52,26 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
                     android:maxLines="1"
-                    android:text="aaaaaaaaaaaaaaaaaaaaaaaaaa"
+                    android:text="Título Tarea"
                     android:textColor="@android:color/black"
                     android:textSize="15sp"
                     android:textStyle="bold" />
-
+                <TextView
+                    android:id="@+id/descripcion_tarea"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:text="Descripción"
+                    android:textSize="15sp"/>
                 <TextView
                     android:id="@+id/estado_tarea"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
-                    android:layout_marginTop="-19.8dp"
+                    android:layout_marginTop="-29.8dp"
                     android:layout_marginEnd="6dp"
-                    android:text="asdasdasdasd"
+                    android:text="Pendiente"
+                    android:maxLines="1"
                     android:textSize="12sp"
                     android:textStyle="bold" />
             </LinearLayout>
