se agrego el combo box de detalle tarea

--- a/app/src/main/res/layout/activity_detalle_tarea.xml
+++ b/app/src/main/res/layout/activity_detalle_tarea.xml
@@ -44,7 +44,18 @@
             android:scrollHorizontally="false" />
     </com.google.android.material.textfield.TextInputLayout>
 
-
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:hint="Seleccione una opcion"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+        <AutoCompleteTextView
+            android:id="@+id/select_progreso"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="none"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
 
 </LinearLayout>
