--- a/app/src/main/res/layout/list_tablero.xml
+++ b/app/src/main/res/layout/list_tablero.xml
@@ -50,7 +50,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
                     android:maxLines="1"
-                    android:text="asdasdasd"
+                    android:text=""
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     android:textStyle="bold"/>
@@ -59,7 +59,7 @@
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
-                    android:text="Tareas()"
+                    android:text=""
                     android:textSize="15sp"/>
 
             </LinearLayout>
