--- a/app/src/main/res/layout/list_tarea.xml
+++ b/app/src/main/res/layout/list_tarea.xml
@@ -31,7 +31,7 @@
                 android:paddingLeft="14dp"
                 android:paddingRight="14dp"
                 android:src="@drawable/ic_baseline_edit_note_24"
-                app:tint="#03a9f4"/>
+                app:tint="#03a9f4" />
 
             <LinearLayout
                 android:id="@+id/linearLayour_tarea"
@@ -52,7 +52,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
                     android:maxLines="1"
-                    android:text="Título Tarea"
+                    android:text=""
                     android:textColor="@android:color/black"
                     android:textSize="15sp"
                     android:textStyle="bold" />
@@ -61,7 +61,7 @@
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
-                    android:text="Descripción"
+                    android:text=""
                     android:textSize="15sp"/>
                 <TextView
                     android:id="@+id/estado_tarea"
@@ -70,7 +70,7 @@
                     android:layout_gravity="end"
                     android:layout_marginTop="-29.8dp"
                     android:layout_marginEnd="6dp"
-                    android:text="Pendiente"
+                    android:text=""
                     android:maxLines="1"
                     android:textSize="12sp"
                     android:textStyle="bold" />
